--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .logo {
-    position: fixed;
+    position: absolute;
     top: 40px;
     left: 80px;
 }
@@ -31,7 +31,6 @@ body {
     gap: 4rem;
     width: 100%;
     height: 100%;
-    /* height: calc(100vh - 40px); */
     margin: 20px auto;
 }
 
@@ -64,6 +63,10 @@ body {
     opacity: 0.5;
 }
 
+.restrictions-msg {
+    color: dimgray;
+}
+
 .buttons-container {
     display: flex;
     gap: 1rem;
@@ -71,12 +74,14 @@ body {
 
 .output-container {
     width: 25%;
+    min-width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     background-color: white;
+    color: rgb(50, 50, 50);
     padding: 1.5rem;
     border-radius: 20px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
@@ -124,4 +129,49 @@ footer a {
     color: var(--fg-color);
     text-decoration: none;
     font-weight: 700;
+}
+
+@media screen and (max-width: 720px) {
+    .buttons-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btn {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    body {
+        width: 90%;
+        margin: auto;
+    }
+
+    .logo {
+        position: relative;
+        top: auto;
+        left: auto;
+        margin: 50px auto 20px;
+    }
+
+    .container {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        gap: 1rem;
+    }
+
+    .input-container {
+        width: 100%;
+        margin: auto;
+    }
+
+    .output-container {
+        width: 100%;
+    }
+
+    #img-nomsg {
+        display: none;
+    }
 }
