--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --bg-color: #f3f5fc;
     --fg-color: #0a3871;
-    --decrypt-color: #d8dfe8;
+    --decrypt-color: rgba(10, 56, 113, 0.1);
 }
 
 * {
@@ -101,10 +101,9 @@ body {
 
 .btn {
     width: 50%; /* To Check */
-    padding: 1.5rem 0;
+    padding: 1.4rem 0;
     color: var(--fg-color);
-    background-color: var(--bg-color);
-    border: 1px solid var(--fg-color);
+    border: none;
     border-radius: 20px;
     font-size: 1.25rem; /* To Check */
     cursor: pointer;
@@ -113,10 +112,12 @@ body {
 
 .btn:hover {
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 }
 
 .btn:active {
     transform: scale(0.98);
+    transition: 0s;
 }
 
 .btn-encrypt {
@@ -124,11 +125,30 @@ body {
     color: white;
 }
 
+.btn-decrypt {
+    background-color: var(--decrypt-color);
+    border: 1px solid var(--fg-color);
+    color: var(--fg-color);
+}
+
 .btn-copy {
     display: none;
     width: 100%;
+    padding: 0.8rem 0;
     background-color: white;
     border: 1px solid var(--fg-color);
+}
+
+.btn-encrypt:active {
+    background-color: rgba(10, 56, 113, 0.9);
+}
+
+.btn-decrypt:active {
+    background-color: rgb(10, 56, 113, 0.2);
+}
+
+.btn-copy:active {
+    background-color: rgba(10, 56, 113, 0.05);
 }
 
 #text-output {
@@ -195,11 +215,13 @@ footer a {
 
     .input-container {
         width: 100%;
+        height: 100%;
         margin: auto;
     }
 
     .output-container {
         width: 100%;
+        height: 50%;
     }
 
     #img-nomsg {
