Minor fixes to responsive design

--- a/style.css
+++ b/style.css
@@ -223,29 +223,23 @@ footer a {
     top: 5%;
     left: 50%;
     padding: 0.8rem 1.5rem;
-    background-color: rgba(192, 192, 192, 0.2);
+    background-color: var(--btn-decrypt-color);
     color: var(--text-color);
     border: 1px solid dimgrey;
     border-radius: 20px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1); */
     z-index: 100;
     transform: translate(-50%, -50%);
 }
 
-/* Mobile View */
-@media screen and (max-width: 720px) {
-    .output-container {
-        min-width: auto;
+/* Responsive Design */
+@media screen and (max-width: 1280px) {
+    main {
+        gap: 2rem;
     }
 
-    .buttons-input {
-        flex-direction: column;
-        gap: 0.6rem;
-        align-items: center;
-    }
-
-    .btn {
-        width: 100%;
+    .input-container {
+        margin-left: 10%;
     }
 }
 
@@ -278,6 +272,7 @@ footer a {
     .input-container {
         width: 100%;
         height: 100%;
+        margin-left: 0;
         margin: auto;
     }
 
@@ -289,6 +284,23 @@ footer a {
 
     #img-nomsg {
         display: none;
+    }
+}
+
+/* Mobile View */
+@media screen and (max-width: 720px) {
+    .output-container {
+        min-width: auto;
+    }
+
+    .buttons-input {
+        flex-direction: column;
+        gap: 0.6rem;
+        align-items: center;
+    }
+
+    .btn {
+        width: 100%;
     }
 }
 
